Fix page flow on mobile

--- a/src/subtitulamos/resources/assets/css/app.css
+++ b/src/subtitulamos/resources/assets/css/app.css
@@ -34,6 +34,7 @@
 /* Prevent a white border by the bottom */
 html {
   background-color: var(--color-bg);
+  min-height: 100%;
   height: 100%;
 }
 
@@ -42,14 +43,14 @@ body {
   padding: 0 !important;
   background-color: var(--color-bg);
   font-family: "Rubik", sans-serif;
+  min-height: 100%;
   height: 100%;
-  display: flex;
-  flex-direction: column;
 }
 
 button {
   cursor: pointer;
   background: transparent;
+  width: fit-content;
 }
 
 button,
@@ -159,8 +160,9 @@ h3 {
 
 header {
   --padding-x: 50px;
+  --padding-y: 25px;
   width: calc(100% - var(--padding-x) * 2);
-  padding: 25px var(--padding-x);
+  padding: var(--padding-y) var(--padding-x);
   background-color: var(--color-bg);
   border-bottom: 1px solid var(--color-gray-divisions);
   display: flex;
@@ -216,8 +218,6 @@ header {
 
 #base {
   display: flex;
-  height: 100%;
-  width: 100%;
 }
 
 #base.w-header {
@@ -243,7 +243,6 @@ header {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  overflow-y: scroll;
 }
 
 .content {
@@ -347,24 +346,26 @@ footer > #footer-content {
   }
 
   #top-links {
-    grid-template-columns: 1fr 80px;
+    grid-template-columns: 1fr 30px;
   }
 
   #homepage-menu-button {
     display: block;
-    font-size: 1.7rem;
-    text-align: right;
+    font-size: 1.2rem;
+    text-align: center;
+    width: 100%;
+    padding: 0;
   }
 
   #register {
-    background-color: var(--color-blue-a);
+    border: 1px solid var(--color-blue-a);
     border-radius: 25px;
     padding: var(--standard-select-button-input-padding);
-    color: var(--color-offwhite) !important;
   }
 
   #register:hover {
     background-color: var(--color-blue-b);
+    color: var(--color-offwhite);
   }
 
   #shows-index,
@@ -392,7 +393,16 @@ footer > #footer-content {
     --content-pading-x: 15px;
   }
 
-  header #logo-text {
+  #top-links {
+    width: 100%;
+  }
+
+  header {
+    --padding-y: 15px;
+    --padding-x: 15px;
+  }
+
+  header #header-logo-wrap {
     display: none;
   }
 }
